postgreSql/Deployments/postgres-simple.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: postgresql-simple
  labels:
    app: postgresql-simple
    cluster-name: postgresql-cluster
spec:
  replicas: 1
  serviceName: postgresql-simple
  selector:
    matchLabels:
      app: postgresql-simple
      cluster-name: postgresql-cluster
  template:
    metadata:
      labels:
        app: postgresql-simple
        cluster-name: postgresql-cluster
        zone: db
    spec:
      containers:
      - name: database
        image: reg-dhc.app.corpintra.net/i3/postgresql:10.3-2.1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 8008
            protocol: TCP
          - containerPort: 64000
            protocol: TCP
        volumeMounts:
          - name: postgresql-simple
            mountPath: "/srv/postgresql/volume"
      securityContext:
        fsGroup: 987
      volumes:
      - name: postgresql-simple
        emptyDir: {}
