postgreSql/Deployments/statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: &name postgresql
  labels:
    app: *name
    cluster-name: &cluster_name postgresql-cluster
spec:
  replicas: 2
  serviceName: *name
  template:
    metadata:
      labels:
        app: *name
        cluster-name: *cluster_name
        zone: db
    spec:
      serviceAccountName: postgresmaster
      containers:
      - name: database
        image: reg-dhc-americas.app.corpintra.net/myanama/postgres:10
        imagePullPolicy: Always
        ports:
        - containerPort: 8008
          protocol: TCP
          name: ctl
        - containerPort: 64000
          protocol: TCP
          name: postgresql
        volumeMounts:
        - name: *name
          mountPath: "/srv/postgresql/volume"
        - name: initsql
          mountPath: /srv/postgresql/home/postgres/dbscripts/custom
      securityContext:
        fsGroup: 987
      terminationGracePeriodSeconds: 0
      volumes:
      - name: initsql
        configMap:
          name: initsql
  volumeClaimTemplates:
  - metadata:
      name: *name
    spec:
      storageClassName: cinder
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
