postgreSql/Deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name postgresql
  labels:
    app: *name
    cluster-name: &cluster_name postgresql-cluster
spec:
  type: NodePort
  ports:
  - port: 64000
    name: postgresql
    targetPort: postgresql
    protocol: TCP
  selector:
    app: *name
    cluster-name: *cluster_name
    role: master
