postgreSql/Deployments/networkpolicies.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
 name: app.db-app.db
spec:
 podSelector:
  matchLabels:
    zone: db
 ingress:
  - from:
    - podSelector:
        matchLabels:
         zone: db
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: app.app-app.db
spec:
  podSelector:
    matchLabels:
      zone: db
  ingress:
    - from:
        - podSelector:
            matchLabels:
              zone: app
